ModelIdentifiers works for enclosures-service
