# api-contracts/enclosures-service/types.ts
@@ -62,6 +62,42 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/api/v1/enclosure-types/identifiers": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get All Enclosure Type Identifiers */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["ModelIdentifier"][];
+                    };
+                };
+            };
+        };
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/api/v1/enclosure-types/ids": {
         parameters: {
             query?: never;
@@ -86,6 +122,44 @@ export interface paths {
                     };
                     content: {
                         "application/json": string[];
+                    };
+                };
+            };
+        };
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/api/v1/enclosure-types/{enclosureTypeId}/base": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get Enclosure Type Base By Id */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path: {
+                    enclosureTypeId: string;
+                };
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["EnclosureTypeBase"];
                     };
                 };
             };
@@ -156,44 +230,6 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
-    "/api/v1/enclosures/bases/{enclosureId}": {
-        parameters: {
-            query?: never;
-            header?: never;
-            path?: never;
-            cookie?: never;
-        };
-        /** Get Enclosure Base By Id */
-        get: {
-            parameters: {
-                query?: never;
-                header?: never;
-                path: {
-                    enclosureId: components["schemas"]["UUID"];
-                };
-                cookie?: never;
-            };
-            requestBody?: never;
-            responses: {
-                /** @description OK */
-                200: {
-                    headers: {
-                        [name: string]: unknown;
-                    };
-                    content: {
-                        "application/json": components["schemas"]["EnclosureBase"];
-                    };
-                };
-            };
-        };
-        put?: never;
-        post?: never;
-        delete?: never;
-        options?: never;
-        head?: never;
-        patch?: never;
-        trace?: never;
-    };
     "/api/v1/enclosures/identifiers": {
         parameters: {
             query?: never;
@@ -217,7 +253,7 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": components["schemas"]["EnclosureIdentifier"][];
+                        "application/json": components["schemas"]["ModelIdentifier"][];
                     };
                 };
             };
@@ -270,40 +306,58 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/api/v1/enclosures/{enclosureId}/base": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get Enclosure Base By Id */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path: {
+                    enclosureId: components["schemas"]["UUID"];
+                };
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["EnclosureBase"];
+                    };
+                };
+            };
+        };
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
 }
 export type webhooks = Record<string, never>;
 export interface components {
     schemas: {
         Enclosure: {
-            /**
-             * Enclosure ID
-             * @description Unique identifier for the enclosure
-             */
-            id: components["schemas"]["UUID"];
-            /**
-             * Name
-             * @description Name of the enclosure
-             */
-            name: string;
-            /**
-             * Enclosure Type
-             * Format: selector
-             * @description The type of the enclosure, such as 'jungle', 'desert', or 'aquarium'
-             */
-            enclosureType: components["schemas"]["EnclosureType"];
-            /**
-             * Capacity
-             * Format: int32
-             * @description The maximum number of animals the enclosure can hold
-             */
-            capacity: number;
-            /**
-             * Status
-             * @description The current status of the enclosure
-             */
-            status: components["schemas"]["EnclosureStatus"];
+            id?: components["schemas"]["UUID"];
+            name?: string;
+            enclosureType?: components["schemas"]["EnclosureType"];
+            /** Format: int32 */
+            capacity?: number;
+            status?: components["schemas"]["EnclosureStatus"];
             createdAt?: components["schemas"]["Instant"];
             updatedAt?: components["schemas"]["Instant"];
+            modelIdentifier?: components["schemas"]["ModelIdentifier"];
         };
         EnclosureBase: {
             /**
@@ -329,31 +383,11 @@ export interface components {
              */
             status: components["schemas"]["EnclosureStatus"];
         };
-        EnclosureIdentifier: {
-            /**
-             * ID
-             * @description Unique identifier of the Enclosure
-             */
-            id: components["schemas"]["UUID"];
-            /**
-             * Name
-             * @description Name of the enclosure
-             */
-            name: string;
-        };
         /** @enum {string} */
         EnclosureStatus: "OPEN" | "UNDER_MAINTENANCE" | "CLOSED" | "TEMPORARILY_CLOSED" | "AWAITING_CLEANING" | "BEING_RENOVATED" | "EMERGENCY_LOCKDOWN";
         EnclosureType: {
-            /**
-             * Enclosure Type
-             * @description Unique identifier for the enclosure type, such as 'jungle', 'desert', or 'aquarium'.
-             */
-            id: string;
-            /**
-             * Enclosure Type Description
-             * @description Description of the type
-             */
-            description: string;
+            id?: string;
+            description?: string;
             createdAt?: components["schemas"]["Instant"];
             updatedAt?: components["schemas"]["Instant"];
         };
@@ -371,6 +405,18 @@ export interface components {
         };
         /** Format: date-time */
         Instant: string;
+        ModelIdentifier: {
+            /**
+             * ID
+             * @description Unique identifier of that instance of the Model as a string
+             */
+            id: string;
+            /**
+             * Label
+             * @description A human readable label to identify that instance of the Model
+             */
+            label: string;
+        };
         /** Format: uuid */
         UUID: string;
     };
