# types/enclosures-service.ts
@@ -2,9 +2,9 @@ import { components } from "@/api-contracts/enclosures-service/types";
 
 export type Enclosure = components["schemas"]["Enclosure"];
 export type EnclosureBase = components["schemas"]["EnclosureBase"];
-export type EnclosureIdentifier = components["schemas"]["EnclosureIdentifier"];
 export type EnclosureStatus = components["schemas"]["EnclosureStatus"];
 export type EnclosureType = components["schemas"]["EnclosureType"];
 export type EnclosureTypeBase = components["schemas"]["EnclosureTypeBase"];
 export type Instant = components["schemas"]["Instant"];
+export type ModelIdentifier = components["schemas"]["ModelIdentifier"];
 export type UUID = components["schemas"]["UUID"];
