# types/staff-service.ts
@@ -5,11 +5,11 @@ export type DepartmentBase = components["schemas"]["DepartmentBase"];
 export type DepartmentIdentifier = components["schemas"]["DepartmentIdentifier"];
 export type Instant = components["schemas"]["Instant"];
 export type LocalDate = components["schemas"]["LocalDate"];
+export type ModelIdentifier = components["schemas"]["ModelIdentifier"];
 export type Staff = components["schemas"]["Staff"];
 export type StaffBase = components["schemas"]["StaffBase"];
 export type StaffDepartment = components["schemas"]["StaffDepartment"];
 export type StaffDepartmentBase = components["schemas"]["StaffDepartmentBase"];
-export type StaffDepartmentIdentifierResponse = components["schemas"]["StaffDepartmentIdentifierResponse"];
 export type StaffIdentifier = components["schemas"]["StaffIdentifier"];
 export type Title = components["schemas"]["Title"];
 export type UUID = components["schemas"]["UUID"];
